--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,25 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h1>Accueil</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+maintenant : {{ "now" | date("y-M-d h:i:s A", 'Europe/Paris') }}<br>
+annee : {{ "now" | date("Y", 'Europe/Paris') }}<br>
+demain : {{ "tomorrow" | date("y-m-d") }}<br>
+string : {{ 'bon' ~ 'bon' | upper }}<br>
+string : {{ ('bon' ~ 'bon') | upper }}<br>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/lagra/Desktop/htmlcdag2/symfony/cours2/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/lagra/Desktop/htmlcdag2/symfony/cours2/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-        <li><a href="/home">home</a></li>
-        <li><a href="/pageTexte/">pageTexte</a></li>
-        <li><a href="/pageTexte/hello">pageTexte id hello</a></li>
-        <li><a href="/site">redirect 1</a></li>
-        <li><a href="/redirectHome">redirect home</a></li>
-    </ul>
-</div>
+<h2>Hello {{ controller_name }}! ✅</h2>
+This friendly message is coming from:
+<ul>
+    <li>Your controller at <code><a href="{{ 'C:/Users/lagra/Desktop/htmlcdag2/symfony/cours2/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
+    <li>Your template at <code><a href="{{ 'C:/Users/lagra/Desktop/htmlcdag2/symfony/cours2/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
+</ul>
+
+Des liens :
+<ul>
+    <li><a href="/home">home</a></li>
+    <li><a href="/pageTexte/">pageTexte</a></li>
+    <li><a href="/pageTexte/hello">pageTexte id hello</a></li>
+    <li><a href="/site">redirect 1</a></li>
+    <li><a href="/redirectHome">redirect home</a></li>
+</ul>
 {% endblock %}
