--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,5 +25,7 @@ Des liens :
     <li><a href="/pageTexte/hello">pageTexte id hello</a></li>
     <li><a href="/site">redirect 1</a></li>
     <li><a href="/redirectHome">redirect home</a></li>
+    <li><a href="/contact">contact</a></li>
+    <li><a href="/user">user</a></li>
 </ul>
 {% endblock %}
