--- a/templates/categorie/list.html.twig
+++ b/templates/categorie/list.html.twig
@@ -17,7 +17,7 @@
 {% for cat in lisCat %}
 <tr>
 <td>{{ cat.id }}</td>
-<td>{{ cat.nomCat }}</td>
+<td><a href="/categorie2/{{ cat.id }}">{{ cat.nomCat }}</a></td>
 <td>{{ cat.description }}</td>
 </tr>
 {% endfor %}
