del une cat avec id par URL

--- a/templates/categorie/list.html.twig
+++ b/templates/categorie/list.html.twig
@@ -21,6 +21,7 @@
 <td><a href="/categorie2/{{ cat.id }}">{{ cat.nomCat }}</a></td>
 <td>{{ cat.description }}</td>
 <td><a href="/editCategorie/{{ cat.id }}">Edit</a></td>
+<td><a href="/deleteCategorie/{{ cat.id }}">Delete</a></td>
 </tr>
 {% endfor %}
 </div>
