form un peu stylee

--- a/templates/categorie/add.html.twig
+++ b/templates/categorie/add.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello CategorieController!{% endblock %}
 
 {% block body %}
+<div class="col-6 offset-3 bg-dark      ">
 {{ form(f) }}
-
+</div>
 {% endblock %}
