--- a/templates/categorie/list.html.twig
+++ b/templates/categorie/list.html.twig
@@ -14,13 +14,16 @@
 <th>Name</th>
 <th>Description</th>
 <th>...</th>
+<th>...</th>
+<th>...</th>
 </tr>
 {% for cat in lisCat %}
 <tr>
 <td>{{ cat.id }}</td>
 <td><a href="/categorie2/{{ cat.id }}">{{ cat.nomCat }}</a></td>
 <td>{{ cat.description }}</td>
-<td><a href="/editCategorie/{{ cat.id }}">Edit</a></td>
+<td><a href="">Edit</a></td>
+<td><a href="/editCategorie/{{ cat.id }}">MAT</a></td>
 <td><a href="/deleteCategorie/{{ cat.id }}">Delete</a></td>
 </tr>
 {% endfor %}
