--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
+{% block title %}Hello COURS !{% endblock %}
 {% block stylesheets %}
 <link rel="stylesheet" href={{ asset('css/style.css') }}
 {% endblock %}
 
 {% block body %}
-<h1>Hello {{ controller_name }} {{nom}} !</h1>
+<h1>Cours SYMFO</h1>
+<p>Hello {{ controller_name }} {{nom}} !</p>
+
+<div><a href="/listCategorie">/listCategorie</a></div>
 
 {% endblock %}
