encore debut auth utilisateur

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -10,5 +10,7 @@
 <p>Hello {{ controller_name }} {{nom}} !</p>
 
 <div><a href="/listCategorie">/listCategorie</a></div>
+<div><a href="/utilisateur">/utilisateur</a></div>
+<div><a href="/addUtilisateur">/addUtilisateur</a></div>
 
 {% endblock %}
