--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -12,5 +12,6 @@
 <div><a href="/listCategorie">/listCategorie</a></div>
 <div><a href="/utilisateur">/utilisateur</a></div>
 <div><a href="/addUtilisateur">/addUtilisateur</a></div>
+<div><a href="/login">/login</a></div>
 
 {% endblock %}
