--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,19 @@
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-light bg-light">
+        {% if app.user %}
+            <div>
+                <a href={{path("app_logout")}} class="btn btn-sm btn-danger">Se deconnecter</a>
+                <a href={{path("add_categorie")}} class="btn btn-sm btn-danger">Nouvelle categorie</a>
+            </div>
+        {% else %}
+            <div>
+                <a href={{path("app_login")}} class="btn btn-sm btn-danger">Se connecter</a>
+                <a href={{path("add_utilisateur")}} class="btn btn-sm btn-danger">S'inscrire</a>
+            </div>
+        {% endif %}
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
