ajout lien exemple crea cat et 3 prods

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,5 +13,6 @@
 <div><a href="/utilisateur">/utilisateur</a></div>
 <div><a href="/addUtilisateur">/addUtilisateur</a></div>
 <div><a href="/login">/login</a></div>
+<div><a href="/produit">/produit creation d'une categorie et 3 produits</a></div>
 
 {% endblock %}
