--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -14,5 +14,7 @@
 <div><a href="/addUtilisateur">/addUtilisateur</a></div>
 <div><a href="/login">/login</a></div>
 <div><a href="/produit">/produit creation d'une categorie et 3 produits</a></div>
+<div><a href="/article">/article realise avec make:crud</a></div>
+
 
 {% endblock %}
