--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,6 +13,7 @@
 <div><a href="/utilisateur">/utilisateur</a></div>
 <div><a href="/addUtilisateur">/addUtilisateur</a></div>
 <div><a href="/login">/login</a></div>
+<div><a href="/logout">/logout</a></div>
 <div><a href="/produit">/produit creation d'une categorie et 3 produits</a></div>
 <div><a href="/article">/article realise avec make:crud</a></div>
 
