test entite base

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -7,6 +7,7 @@
 
 {% block body %}
 <h1>Cours SYMFO</h1>
+<h2>test!</h2>
 <p>Hello {{ controller_name }} {{nom}} !</p>
 
 <div><a href="/listCategorie">/listCategorie</a></div>
